--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'samurai';
+  src: url('/fonts/CFSamuraiBob.ttf');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +13,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
